# harness-engineering

./: .gitignore  @tree.md  CLAUDE.md  README.md  pyproject.toml
.archive/: add-root-claude.plan.md  link-copilot-instructions.plan.md  link-gemini-instructions.plan.md  simplify-claude-md.plan.md  solidify-root-claude.plan.md
.claude/skills/harness-install/: CLI-TOOLS-GUIDE.md  SKILL.md
HARNESS/: AI-INSTRUCTIONS-MAPPING.md  CLAUDE.md  README.md  diagnosis.md  install.py  judgment-rubrics.md  letter-to-future-sessions.md  maintenance-protocol.md  model-dispatch.md  plan-template.md  select-cli-tools.py  uninstall.py
HARNESS/backup/: AGENTS.md.replaced.2026-07-10.md  CLAUDE.md.2026-07-09.md  CLAUDE.md.before-install.2026-07-04.md  CLAUDE.md.before-install.2026-07-05.md  CLAUDE.md.installer.2026-07-04.md  CLAUDE.md.original.2026-07-03.md  README.md.2026-07-04.md  diagnosis.md.2026-07-04.md  git.md.2026-07-04.md  letter-to-future-sessions.md.2026-07-04.md  tools.md.2026-07-04.md
HARNESS/rules/: dotnet.md  git.md  python.md  tools.md  workflow.md
claude/: AI-INSTRUCTIONS-MAPPING.md  CLAUDE.md  README.md  check-harness.sh  check_harness.py  delegation-templates.md  env.example.md  install.py  install.sh  letter-to-future-sessions.md  maintenance-protocol.md  uninstall.py  uninstall.sh
